--- a/templates/about.html
+++ b/templates/about.html
@@ -1,1 +1,13 @@
+{% extends "layout.html" %}
+{% block content %}
+<div class="about">
+    <h1>My about page</h1>
+    <p>The Map app shows different color for countries with different popupalation range.
+      If popupalationis below 10000000 people it is green, if popupalation is greater than 20000000 it is red, in between it is orange. </p>
+    <p> For volcanoes if elevation is less than 1000m the marker is green, if elevation is greater than 3000m the marker is red, and in between
+      the marker is orange </p>
+    <p> You can turn on and off the layers</p>
 
+
+</div>
+{% endblock %}
